# tinhorn

./: .gitignore  AGENT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  release-plz.toml
.claude/: settings.json
.claude/hooks/: conventional-commit.sh
.conductor/: settings.toml
.github/workflows/: cd.yml  ci.yml  release-plz.yml  release.yml
crates/bevy_ratatui/: Cargo.toml  PROVENANCE.md
crates/bevy_ratatui/src/: context_trait.rs  ratatui_context.rs  ratatui_plugin.rs
crates/bevy_ratatui/src/crossterm_context/: cleanup.rs  context.rs  error.rs  kitty.rs  mod.rs
crates/bevy_ratatui/src/crossterm_context/translation/: mod.rs
crates/bevy_ratatui/src/windowed_context/: context.rs
crates/tinhorn/: CHANGELOG.md  Cargo.toml
crates/tinhorn-core/: CHANGELOG.md  Cargo.toml
crates/tinhorn-core/src/: app.rs  dice_geom.rs  lib.rs  parse.rs  physics.rs  view_math.rs
crates/tinhorn/src/: cli.rs  foley.rs  graphics.rs  main.rs  paint.rs  render3d_view.rs  ui.rs
crates/tinhorn/src/render3d/: camera.rs  dice.rs  material.rs  math.rs  mesh.rs  object.rs  texture.rs  transform.rs
crates/tinhorn/src/render3d/pipeline/: fragment.rs  mod.rs  rasterize.rs  vertex.rs
crates/tinhorn/src/scene/: arena.rs  convert.rs  mod.rs
crates/tinhorn/src/term/: PROVENANCE.md  context_trait.rs  mod.rs  ratatui_context.rs  ratatui_plugin.rs
crates/tinhorn/src/term/crossterm_context/: cleanup.rs  context.rs  error.rs  event.rs  kitty.rs  mod.rs  mouse.rs
crates/tinhorn/src/term/crossterm_context/translation/: keyboard_translation.rs  mod.rs
docs/: render_demo.py
src/: app.rs  cli.rs  foley.rs  main.rs  parse.rs  physics.rs  render3d_view.rs  ui.rs
src/render3d/: LICENSE-render3d  camera.rs  color.rs  dice.rs  light.rs  mod.rs  primitives.rs  scene.rs
src/render3d/pipeline/: framebuffer.rs
