[package]
name = "tinhorn"
version = "0.1.2"
edition = "2021"
description = "A fancy dice roller: shake the dice, watch em' fly, hear it bounce."
license = "MIT OR Apache-2.0"
repository = "https://github.com/puradox/tinhorn"
readme = "README.md"
keywords = ["dice", "roll", "rpg", "ttrpg"]
categories = ["command-line-utilities", "games"]
exclude = [
    "docs/",
    ".conductor/",
    ".github/",
    "AGENT.md",
    "CLAUDE.md",
    "CONTRIBUTING.md",
    "TODO.md",
]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
rand = "0.8"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rodio = { version = "0.22.2", default-features = false, features = ["playback"] }

[profile.release]
opt-level = 3
lto = true
