[workspace]
resolver = "2"
members = ["crates/tinhorn-core", "crates/tinhorn"]

# Shared dependency pins, referenced by each crate with `{ workspace = true }`.
# One place to bump a version, and the two crates can never drift apart.
[workspace.dependencies]
tinhorn-core = { path = "crates/tinhorn-core", version = "0.1.4" }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
glam = "0.33"
rapier3d = "0.34"
ratatui = "0.30"
crossterm = "0.29"
clap = { version = "4", features = ["derive"] }
rodio = { version = "0.22.2", default-features = false, features = ["playback"] }

# The animation wants LTO; kept at the workspace root so it applies to the
# whole build.
[profile.release]
opt-level = 3
lto = true
