[workspace]
resolver = "3"
members = ["crates/tinhorn-core", "crates/tinhorn"]

# Shared dependency pins, referenced by each crate with `{ workspace = true }`.
# One place to bump a version, and the two crates can never drift apart.
[workspace.dependencies]
tinhorn-core = { path = "crates/tinhorn-core", version = "0.2.0" }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
glam = "0.33"
rapier3d = "0.34"
ratatui = "0.30"
crossterm = "0.29"
clap = { version = "4", features = ["derive"] }
rodio = { version = "0.22.2", default-features = false, features = ["playback"] }
# The kitty graphics arena's payload pipeline (see `tinhorn/src/graphics.rs`):
# zlib the raw RGB, base64 it, chunk it into APC escapes. flate2 defaults to the
# pure-Rust miniz_oxide backend, so no C toolchain is pulled in.
base64 = "0.22"
flate2 = "1.1"

# The animation wants LTO; kept at the workspace root so it applies to the
# whole build.
[profile.release]
opt-level = 3
lto = true

# Bevy is miserable to debug-build unoptimized; give dependencies (incl. Bevy)
# real optimization even in dev, but keep our own code quick to compile. Only
# affects builds that pull Bevy in (the `bevy` feature); the default build is
# unchanged.
[profile.dev.package."*"]
opt-level = 3

# Workaround for an objc2-foundation crash on macOS 26 (Tahoe) under Bevy.
# See: https://github.com/bevyengine/bevy/issues/19625
[profile.dev.package.objc2]
debug-assertions = false
