[package]
name = "tinhorn"
version = "0.1.4"
edition = "2024"
description = "A dice cup for your terminal: shake the cup, watch dice fly, hear them land."
license = "MIT OR Apache-2.0"
repository = "https://github.com/puradox/tinhorn"
readme = "../../README.md"
keywords = ["dice", "roll", "rpg", "ttrpg"]
categories = ["command-line-utilities", "games"]

[dependencies]
tinhorn-core = { workspace = true }
ratatui = { workspace = true, features = ["unstable-widget-ref"] }
crossterm = { workspace = true }
rand = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rodio = { workspace = true }
glam = { workspace = true }

# --- Stage-2 Bevy renderer (behind the `bevy` feature; off by default) ---
# All optional, so a default `cargo build`, CI, `cargo install`, and the one-shot
# CLI never compile or link Bevy. The vendored glue crates are path deps (see
# their PROVENANCE.md); the engine is exact-pinned and trimmed to headless PBR.
bevy = { version = "=0.19.0", default-features = false, optional = true, features = [
  "multi_threaded",
  "bevy_render",
  "bevy_core_pipeline",
  "bevy_pbr",
  "bevy_asset",
  "tonemapping_luts",
  "zstd_rust",
  "std",
  "async_executor",
] }
# `version` is required for `cargo package`/release-plz (crates.io forbids
# unversioned path deps); local builds use the `path` fork. The `bevy` feature is
# off by default, so publish verification builds without it and never resolves
# this dep from crates.io — installing `--features bevy` from crates.io is not
# supported until the fork is vendored as an in-tree module (a later stage).
bevy_ratatui = { path = "../bevy_ratatui", version = "0.11.1", optional = true, default-features = false, features = [
  "std",
  "async_executor",
  "crossterm",
  "keyboard",
  "mouse",
] }
# NOTE: bevy_ratatui_camera is intentionally NOT a dependency yet. The Stage-2
# spike reads the render target back with Bevy 0.19's built-in
# `bevy_render::gpu_readback` (Readback + ReadbackComplete) and a hand-rolled
# half-block blit. Vendoring/porting that crate's richer widget strategies is a
# parity-stage follow-up (see puradox/bevy_ratatui_camera).

[features]
# Compile the Bevy dice arena and its `--bevy` entry point. Heavy; opt-in.
bevy = ["dep:bevy", "dep:bevy_ratatui"]
